# cow-agent

./: .env.example  .gitignore  LICENSE.md  README.md  ape-config.yaml  bot.py  hello.py
.github/workflows/: ci.yml
contracts/: TokenAllowlist.sol
cow-trader/: README.md  ape-config.yaml  bot.py  pyproject.toml  system_prompt.txt
cow-trader/contracts/: AgentTradingModule.sol  TokenAllowlist.sol
cow-trader/contracts/dependencies/@gnosis-guild/zodiac/contracts/core/: Module.sol
cow-trader/contracts/dependencies/@gnosis-guild/zodiac/contracts/factory/: FactoryFriendly.sol
cow-trader/contracts/dependencies/@gnosis-guild/zodiac/contracts/guard/: BaseGuard.sol  Guardable.sol
cow-trader/contracts/dependencies/@gnosis-guild/zodiac/contracts/interfaces/: IAvatar.sol  IGuard.sol
cow-trader/contracts/dependencies/cowprotocol/contracts/src/contracts/interfaces/: IERC20.sol
cow-trader/contracts/dependencies/cowprotocol/contracts/src/contracts/libraries/: GPv2Order.sol
cow-trader/contracts/interfaces/: ITokenAllowlist.sol
cow-trader/tests/: test_allowlist.py
smart-contract-infra/: .prettierignore  .solhint.json  README.md  bun.lockb  foundry.toml  index.ts  package.json  remappings.txt
smart-contract-infra/deployments/: abis.ts  contracts.json
smart-contract-infra/script/: 01_Deploy_Allowlist.s.sol  02_Deploy_CoWSwapGuard.s.sol  03_Deploy_MasterCopy.s.sol  04_Deploy_TradingModuleProxy.s.sol  05_AddTokens_Allowlist.s.sol  05_Enable_TradingModule.s.sol  06_AddTokens_Allowlist.s.sol  ScriptUtils.sol
tests/: test_allowlist.py
(+14 files in other folders)
